--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="logo">
-        <img src="universidad.png" alt="Logo de la universidad">
+        <img src="./assets/img/logoUniversidad.png" alt="Logo de la universidad">
     </div>
     <ul class="menu">
         <li><a href="#">Ejercicio 1</a></li>
