--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li><a href="#">Ejercicio 1</a></li>
         <li><a href="#">Ejercicio 2</a></li>
         <li><a href="#">Ejercicio 3</a></li>
-        <li><a href="#">Ejercicio 4</a></li>
+        <li><a href="./views/nombreProfes.html">Ejercicio 4</a></li>
         <li><a href="#">Ejercicio 5</a></li>
         <li><a href="#">Ejercicio 6</a></li>
     </ul>
